correcting content element styles on smaller devices

--- a/static/styles.css
+++ b/static/styles.css
@@ -3,8 +3,8 @@
     width: 100% !important;
     font-size: 1em !important;
   }
-  .content {
-    width: 100%;
+  #content {
+    padding: 0 1% !important;
   }
 }
 @media (max-width: 990px) {
